--- a/index.html
+++ b/index.html
@@ -4,238 +4,220 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Portfolio</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      justify-content: center;
-      align-items: center;
-      background-color: rgba(156, 160, 138, 0);
-
-    }
-
-    #raja {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .class {
-      height: 130px;
-      width: 130px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    #one {
-      border-right: black 2px solid;
-      border-bottom: 2px black solid;
-    }
-
-    #two {
-      border-right: black 2px solid;
-      border-bottom: 2px black solid;
-    }
-
-    #three {
-      border-right: black 2px solid;
-    }
-
-    #four {
-      border-right: black 2px solid;
-      border-bottom: 2px black solid;
-    }
-
-    #five {
-      border-right: black 2px solid;
-      border-bottom: 2px black solid;
-    }
-
-    #six {
-      border-right: black 2px solid;
-
-    }
-
-    #seven {
-      border-bottom: 2px black solid;
-    }
-
-    #eight {
-      border-bottom: black 2px solid;
-    }
-
-    #punit {
-      height: 100px;
-      width: 100px;
-      border-radius: 7px;
-      background-color: bisque;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 20px;
-      cursor: pointer;
-      color: black;
-    }
-
-    #reset {
-      display: flex;
-      justify-content: center;
-      align-self: center;
-      gap: 10px;
-    }
-
-    #result {
-      height: 70px;
-      width: fit-content;
-      background-color: rgba(214, 177, 151, 0.297);
-      border-radius: 10px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 40px;
-    }
-
-    .result {
-      display: flex;
-      justify-content: center;
-      align-self: center;
-      font-size: 40px;
-    }
-
-    #ram {
-      background-color: black;
-      color: aliceblue;
-      font-size: 20px;
-      border-radius: 15px;
-      height: 40px;
-      width: 130px;
-      cursor: pointer;
-
-    }
-
-    .ram {
-      display: flex;
-      justify-content: center;
-      align-self: center;
-    }
+   
   </style>
+
 </head>
 
 <body>
-  <div id="raja">
-    <div class="linefirst">
-      <div class="class" id="one">
-        <button id="punit"></button>
-      </div>
-      <div class="class" id="two">
-        <button id="punit"></button>
-      </div>
-      <div class="class" id="three">
-        <button id="punit"></button>
-      </div>
-    </div>
-    <div class="linesecond">
-      <div class="class" id="four">
-        <button id="punit"></button>
-      </div>
-      <div class="class" id="five">
-        <button id="punit"></button>
-      </div>
-      <div class="class" id="six">
-        <button id="punit"></button>
-      </div>
-    </div>
-    <div class="linethird">
-      <div class="class" id="seven">
-        <button id="punit"></button>
-      </div>
-      <div class="class" id="eight">
-        <button id="punit"></button>
-      </div>
-      <div class="class" id="nine">
-        <button id="punit"></button>
-      </div>
-    </div>
-  </div>
+  <header>
+    <a class="a" href="" id="punit">
+      Punit
+    </a>
+    <a class="a" id="a" href="#raju">
+      <div id="pop">Home</div>
+    </a>
+    <a class="a" id="a" href="#kaju">
+      <div id="pop">Services</div>
+    </a>
+    <a class="a" id="a" href="#taju">
+      <div id="pop">Skills</div>
+    </a>
+    <a class="a" id="a" href="#maju">
+      <div id="pop">Education</div>
+    </a>
+    <a class="a" id="a" href="#khaju">
+      <div id="pop">Contact</div>
+    </a>
+  </header> <br><br><br>
   <br>
+  <main id="raju">
+    <mainone>
+      <h1 id="dinesh">Hello, I'm</h1>
+      <h1 id="kappu">Punit</h1>
+      <h2 id="pappu">I'm a <ai> Web Designer</ai>
+      </h2>
+      <p>Hello! I'm Punit Mundotiya, a passionate web developer dedicated to crafting innovative and user-friendly
+        digital Experiences. With a storng foundation in fornt-end and back-end technologies, I bring creative solutions
+        to life through clean and efficient code.</p>
+      <p>My expertise includes HTML, CSS and JavaScript.</p>
+    </mainone>
+    <maintwo>
+      <br><br>
+      <img src="Me.jpg" alt="Me">
+    </maintwo>
+  </main>
+  <section >
+    <media>
+      <a id="rajeev"
+        href="https://www.linkedin.com/in/punit-mundotiya-621a84339?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
+        <i id="social" class="fa-brands fa-linkedin"></i></a>
+      <a id="rajeev" href="https://github.com/punit-art"><i id="social" class="fa-brands fa-github"></i></a>
+      <a id="rajeev" href="https://www.instagram.com/punit___100/profilecard/?igsh=MTY5NGRqeTl1bXV1eg=="><i id="social"
+          class="fa-brands fa-instagram"></i></a>
+      <a id="rajeev" href="https://t.me/+917023843046"><i id="social" class="fa-brands fa-telegram"></i></a>
+    </media>
+  </section>
 
-  <div id="reset">
-    <div class="result">Result</div>
-    <div id="result"></div>
-  </div>
+  <section id="kaju">
+    <h3 id="kapil">My Services</h3>
+    <br>
+    <div id="contener">
+
+      <div class="Jone">
+        <h3>Web Development</h3>
+        I create responsive and dynamic websites tailored to your needs, ensuring high performance and scalability.
+      </div>
+      <div class="Jone">
+        <h3>UI/UX Design</h3>
+        Designing user-friendly interfaces with an emphasis on accessibility, usability, and aesthetic appeal.
+      </div>
+      <div class="Jone">
+        <h3>Content Writing</h3>
+        Providing professional content creation services for blogs, articles, websites, and more.
+      </div>
+      <div class="Jone">
+        <h3>SEO Optimization</h3>Optimizing websites to rank higher on search engines and attract more organic traffic.
+      </div>
+    </div>
+  </section>
   <br>
-  <div class="ram"><button id="ram">New Game</button></div>
+  <section id="taju">
+    <h3 id="kapil">My Skills</h3>
+    <br>
+    <abc> I possess a wide range of skills to bring value to your projects:</abc>
+    <br>
+    <div id="contener">
 
-  <script>
-    let name1 = prompt("Enter your name!");
-    let name2 = prompt("Enter the second name!");
+      <div class="jitu">
+        <h3>HTML</h3>
+        <div class="skill">
+          <div class="progress">
+            <div class="progress-bar" style="width: 90%;">90%</div>
+          </div>
+        </div>
+      </div>
 
-    let punit = document.querySelectorAll("#punit");
-    let value = true;
-    let button = document.querySelector("#ram");
-    let result = document.querySelector("#result");
-    let newgame = document.querySelector("#ram");
+      <div class="jitu">
+        <h3>CSS</h3>
+        <div class="skill">
+          <div class="progress">
+            <div class="progress-bar" style="width: 85%;">85%</div>
+          </div>
+        </div>
 
-    punit.forEach((pk) => {
-      pk.addEventListener("click", () => {
-        if (value) {
-          pk.innerText = name1;
-          value = false;
-        } else {
-          pk.innerText = name2;
-          value = true;
-        }
-        pk.disabled = true;
-        checkwinner();
-      });
-    });
-    
-    const winpatterns = [
-      [0, 1, 2],
-      [3, 4, 5],
-      [6, 7, 8],
-      [0, 3, 6],
-      [1, 4, 7],
-      [2, 5, 8],
-      [0, 4, 8],
-      [2, 4, 6]
-    ];
+      </div>
+      <div class="jitu">
+        <h3>JavaScript</h3>
+        <div class="skill">
+          <div class="progress">
+            <div class="progress-bar" style="width: 70%;">70%</div>
+          </div>
+        </div>
 
-    const disablepunit = () => {
-      for (let box of punit) {
-        box.disabled = true;
-      }
-    }
+      </div>
 
-    const reset = () => {
-      value = true;
-      for (let box of punit) {
-        box.disabled = false;
-        box.innerText = "";
-      }
-    };
+  </section>
+  <br><br>
+  <section id="maju">
+    <h3 id="kapil">My Education</h3>
+    <br>
+    <abc> A journey of learning and growth through these educational experiences:</abc>
+    <br>
+    <div id="contener">
 
-    newgame.addEventListener("click", reset);
+      <div class="jitu" id="dileep">
+        <h3>B.Tech Degree in Information Technology</h3>
+        2024-2028 <br><br>
+        NIT Srinagar <br>
+        Graduation will with First Class Honors, specializing in Software Development and Web Technologies.
+      </div>
+      <div class="jitu" id="dileep">
+        <h3>High School </h3>
+        Mahatma Gandhi Govt School,(RBSE Board) <br><br>
+        10th=>2020-2021(88.83%) <br>
+        12th=>2022-2023(80.40%) <br><br>
+        I passed My board Classes with Excellent Marks.
+      </div>
+    </div>
 
-    const checkwinner = () => {
-      for (let pattern of winpatterns) {
-        let pos1 = punit[pattern[0]].innerText;
-        let pos2 = punit[pattern[1]].innerText;
-        let pos3 = punit[pattern[2]].innerText;
-        if (pos1 != "" && pos2 != "" && pos3 != "") {
-          if (pos1 === pos2 && pos2 === pos3) {
-            // console.log("winner")
-            result.innerText = `Winner is ${pos1}`
-            result.style.backgroundColor = "green";
-            disablepunit();
-          }
-        }
-      }
-    }
+  </section>
+  <section id="khaju">
+    <h4 id="kiku">Get in Touch</h4>
+    <abc>If you'd like to work together or have any questions, feel free to reach out to me!:</abc>
+    <br>
+    <div id="contener">
 
-  </script>
+      <div class="jitu" id="jiju">
+        <br>
+        Name <br><br>
+        <input type="text" id="name" placeholder="Your Name"><br><br>
+        Email <br><br>
+        <input type="text" id="name" placeholder="Your Email"><br><br>
+        Message <br><br>
+        <input type="text" id="message" placeholder="Any Message"><br><br><br>
+        <button>Send Message</button>
+
+      </div>
+      <div class="jitu" id="jiju">
+        <h3>Contact Details </h3>
+        Email: punitmundotiya24@gmail.com <br><br>
+        Phone: +917006980870
+        <br>
+        <br>
+        <media id="kabul">
+          <a id="rajeev"
+            href="https://www.linkedin.com/in/punit-mundotiya-621a84339?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">
+            <i id="social" class="fa-brands fa-linkedin"></i></a>
+          <a id="rajeev" href="https://github.com/punit-art"><i id="social" class="fa-brands fa-github"></i></a>
+          <a id="rajeev" href="https://www.instagram.com/punit___100/profilecard/?igsh=MTY5NGRqeTl1bXV1eg=="><i
+              id="social" class="fa-brands fa-instagram"></i></a>
+          <a id="rajeev" href="https://t.me/+917023843046"><i id="social" class="fa-brands fa-telegram"></i></a>
+        </media>
+      </div>
+    </div>
+
+  </section>
+  <br><br>
+
+  <footer>
+
+    <div class="love">
+      <h4>My Logo</h4> Pending
+    </div>
+    <div class="love">
+      <h4>About Me</h4>
+      I will a passionate Software engineer focused on providing
+      high-quality services in web development, UI/UX design,
+      and digital marketing. My goal is to help businesses grow
+      by crafting innovative solutions that meet their needs.
+    </div>
+    <div class="love">
+      <h4>Quick Links</h4>
+      <a href="#kaju" class="rep">Services</a>
+      <a href="#taju" class="rep">Skills</a>
+      <a href="#maju" class="rep">Education</a>
+      <!-- <a href="#khaju" class="rep">Experience</a> -->
+      <a href="#raju" class="rep">About</a>
+      <a href="#khaju" class="rep">Contact</a>
+    </div>
+    <div class="love">
+      <h4>Follow Us</h4>
+      <a href="https://www.linkedin.com/in/punit-mundotiya-621a84339?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+        id="sala">linkedln</a>
+      <a href="https://github.com/punit-art" id="sala">GitHub</a>
+      <a href="https://www.instagram.com/punit___100/profilecard/?igsh=MTY5NGRqeTl1bXV1eg==" id="sala">Instagram</a>
+      <a href="https://t.me/+917023843046" id="sala">Telegram</a>
+    </div>
+
+  </footer>
+  <script src="script.js">  </script>
 </body>
 
 </html>
